# budget-app

./: .gitignore  README.md
.github/: CODEOWNERS
backend/: Dockerfile  README.md  alembic.ini  asgi.py  entrypoint.sh  pyproject.toml  setup.cfg
backend/src/finance_api/: app.py  config.py  constants.py
backend/src/finance_api/alembic/: env.py
backend/src/finance_api/alembic/versions/: 1b2e8a826404_add_transaction_rules.py  1f337d253530_add_skip_transaction_table.py  339b72676a0e_initial_migration.py  d95aa97b1549_implement_fund_masters.py  ffc25ee1af60_add_transaction_type_marking_to_rules.py
backend/src/finance_api/controllers/: __init__.py  budget.py  config.py  health.py  rule.py  transaction.py  user.py
backend/src/finance_api/controllers/budget/: __init__.py  management.py  master_fund_operations.py  master_fund_queries.py  queries.py  router.py
backend/src/finance_api/crud/: __init__.py  account.py  budget.py  organization.py  transaction.py  user.py
backend/src/finance_api/crud/budget/: __init__.py  base.py  calculations_budget.py  calculations_fund.py  calculations_fund_allocations.py  copy.py  delete.py  expense.py  fund.py  income.py  master_fund_operations.py  master_fund_orphaned.py  queries.py
backend/src/finance_api/crud/rule/: __init__.py  application.py  base.py  matching.py  preview.py
backend/src/finance_api/crud/transaction/: __init__.py  assignment.py  base.py  breakdown.py  queries.py
backend/src/finance_api/models/: __init__.py  account.py  budget.py  db.py  organization.py  transaction.py  transaction_rule.py  user.py
backend/src/finance_api/schemas/: __init__.py  account.py  budget.py  exceptions.py  finance.py  orgs.py  rules.py  schema.py  transactions.py
backend/src/finance_api/services/: __init__.py  access.py  mixins.py  simplefin.py
frontend/: Dockerfile  README.md  eslint.config.js  openapi-ts.config.ts  package-lock.json  package.json  quasar.config.ts  tsconfig.json
frontend/src/: App.vue  api-client.config.ts
frontend/src/api/: sdk.gen.ts  types.gen.ts
frontend/src/components/: EssentialLink.vue
frontend/src/css/: app.scss  dialog-styles.scss  quasar.variables.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/modules/finance/presentation/: routes.ts
frontend/src/router/: index.ts  routes.ts
frontend/src/shared/adapters/: FetchHttpClient.ts  index.ts
frontend/src/shared/ports/: HttpClient.ts
frontend/src/stores/: index.ts
(+67 files in other folders)
