[project]
name = "finance_api"
version = "0.0.0"
description = ""
authors = [{ name = "Eli", email = "eli@appiversehub.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "litestar>=2.16.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 88
extend-exclude = ["src/finance_api/alembic"]

[tool.ruff.lint]
# Select specific rule sets instead of ALL
select = ["ALL"]

ignore = [
    'FIX002',
    'PLR0913',
    'FBT001',
    'FBT002',
    'D203',
    'D212',
]


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
finance-api = { workspace = true }

[dependency-groups]
dev = [
    "finance-api",
    "ruff>=0.14.2",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
    "pytest-xdist>=3.8.0",
    "filelock>=3.16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/finance_api/controllers",
    "--cov=src/finance_api/crud",
    "--cov=src/finance_api/services",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]


